fix: update item card text color for better contrast

--- a/src/app/shared/showcase/item-card/item-card.scss
+++ b/src/app/shared/showcase/item-card/item-card.scss
@@ -30,5 +30,5 @@ mat-chip-set {
 
 mat-card {
   background-color: var(--mat-sys-secondary-container);
-  color: var(--mat-sys-on-secondary-container);
+  color: var(--mat-sys-on-surface);
 }
